# serde-view

./: Cargo.toml  README.md
serde_view_macros/: Cargo.toml
serde_view_macros/src/: lib.rs
src/: lib.rs  ser.rs
tests/: simple.rs
