[package]
name = "serde_view_macros"
version = "0.1.0"
edition = "2021"

authors = ["Jens Reimann <jreimann@redhat.com>"]
license = "Apache-2.0"
description = "Serialize views of data"
repository = "https://github.com/ctron/serde-view"
categories = ["data-structures", "encoding", "development-tools"]
keywords = ["serde", "view", "derive"]
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2" }
darling = "0.14"
convert_case = "0.6.0"
